--- a/finalmusic/style.css
+++ b/finalmusic/style.css
@@ -29,7 +29,7 @@
   width: 47%;
 }
 #picture{
-	background: url(pictures/EltonMona.png) no-repeat center;
+	background: url(pictures/Gravity.png) no-repeat center;
 	background-size: 100% 100%;
 	border: none;
 }
